In light of recent feedback, I have made teh following changes: Fixed search button not having correct border radius when search bar is not present, Fixed header height on smaller devices, it now matches the original site more closely, Fixed the < console error, Worked on the plan after receiving feedback, Changed burger menu to be contained in a span, this is ideal for animations, Updated carousel tooltip styles, button colours and lack of arrow is about the only thing that doesn't match live now, Made news card creator images circular using border-radius, Working on making news info boxes the same size.

--- a/css/application.css
+++ b/css/application.css
@@ -871,7 +871,12 @@ Header:
 ------------------------------------------------------ */
 .header .container-top {
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 0;
+}
+@media screen and (min-width: 768px) {
+  .header .container-top {
+    margin-bottom: 20px;
+  }
 }
 .header__search-small form {
   margin-top: 11px;
@@ -960,6 +965,16 @@ Header:
   vertical-align: middle;
   color: #fff;
   outline: none;
+}
+@media screen and (min-width: 992px) {
+  .header__search-wide form button {
+    border-radius: 3px;
+  }
+}
+@media screen and (min-width: 1260px) {
+  .header__search-wide form button {
+    border-radius: 0 3px 3px 0;
+  }
 }
 .header__search-wide form button:hover {
   background-color: #7e808a;
@@ -1604,6 +1619,14 @@ Slide show section:
   text-align: center;
   color: white;
 }
+.box h3 {
+  font-size: 1.125rem;
+  padding-bottom: 17px;
+}
+.box p {
+  font-size: 0.8125rem;
+  line-height: 1.375rem;
+}
 
 .arrow {
   position: absolute;
@@ -2142,6 +2165,7 @@ Latest news section:
   }
 }
 .news__card {
+  flex-direction: column;
   margin-top: 30px;
   top: 0;
   position: relative;
@@ -2149,6 +2173,7 @@ Latest news section:
   transition: 0.5s ease;
 }
 .news__card .btn {
+  justify-self: flex-end;
   background-color: #926fb1;
   border-color: #926fb1;
 }
@@ -2222,7 +2247,7 @@ Latest news section:
 .news__card__creator__pfp {
   border-radius: 50%;
 }
-.news__card__creator__pfp img {
+.news__card__creator img {
   border-radius: 50%;
 }
 .news__card__creator__info {
@@ -2285,6 +2310,10 @@ Latest news section:
 }
 .tooltip:hover {
   text-decoration: underline;
+}
+
+.test {
+  min-height: 300px;
 }
 
 /* -----------------------------------------------------
