--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -9,7 +9,11 @@ Header:
 
   .container-top {
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 0;
+
+    @include mq(medium) {
+      margin-bottom: 20px;
+    }
   }
 
   //Applies to search bar in header for small layouts
@@ -105,6 +109,14 @@ Header:
         vertical-align: middle;
         color: $white;
         outline: none;
+
+        @include mq(large) {
+          border-radius: 3px;
+        }
+
+        @media screen and (min-width: 1260px) {
+          border-radius: 0 3px 3px 0;
+        }
 
         &:hover {
           background-color: darken(#999aa2, 10%);
