--- a/scss/modules/_services.scss
+++ b/scss/modules/_services.scss
@@ -224,6 +224,30 @@ Card:
   }
 }
 
+@include mq(landscape) {
+  .card:nth-child(1) {
+    flex: 1 0 calc(33% - 20px);
+  }
+  .card:nth-child(2) {
+    flex: 1 0 calc(33% - 20px);
+  }
+  .card:nth-child(3) {
+    flex: 1 0 calc(33% - 20px);
+  }
+  .card:nth-child(4) {
+    flex: 1 0 calc(25% - 20px);
+  }
+  .card:nth-child(5) {
+    flex: 1 0 calc(25% - 20px);
+  }
+  .card:nth-child(6) {
+    flex: 1 0 calc(25% - 20px);
+  }
+  .card:nth-child(7) {
+    flex: 1 0 calc(25% - 20px);
+  }
+}
+
 .card-btn-container {
   margin-top: auto;
 }
